--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | sudo tee /etc/apt/trusted.gpg.d/kitware.gpg >/dev/null
   - sudo add-apt-repository -y 'deb https://apt.kitware.com/ubuntu/ bionic main'
   - sudo apt-get -q update
-  - sudo apt-get -y upgrade cmake
+  - sudo apt-get -y install cmake
 script:
   - gcc -v && cmake --version
 ...
