--- a/.travis.yml
+++ b/.travis.yml
@@ -3,19 +3,12 @@ language: cpp
 dist: bionic
 os: linux
 compiler: gcc
-addons:
-  apt:
-    sources:
-      - sourceline: 'deb https://apt.kitware.com/ubuntu/ bionic main'
-      - key_url: https://apt.kitware.com/keys/kitware-archive-latest.asc
-    packages: 
-      - cmake
 before_install:
-  #- wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | sudo tee /etc/apt/trusted.gpg.d/kitware.gpg >/dev/null
-  #- sudo add-apt-repository -y 'deb https://apt.kitware.com/ubuntu/ bionic main'
+  - sudo rm -rf /usr/local/cmake-3.12.4
+  - wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | sudo tee /etc/apt/trusted.gpg.d/kitware.gpg >/dev/null
+  - sudo add-apt-repository -y 'deb https://apt.kitware.com/ubuntu/ bionic main'
   - sudo apt-get -q update
   - sudo apt-get -y install cmake
 script:
-  - gcc -v && cmake --version
-  - 
+  - gcc -v && /usr/local/bin/cmake --version
 ...
